Added images folder and picture, linked to index, updated index, script, and style

--- a/index.html
+++ b/index.html
@@ -5,7 +5,21 @@
         <title>My Personal Website</title>
     </head>
     <body>
-        <h1>Hello World!</h1>
+        <h1>Welcome to my Website!</h1>
+             <p>Welcome to my very first website. I'm so glad that I was able to learn how to do this, and that I am now able to share this with you!</p>
         <script src="script.js"></script>
+            <a rel="Twitter" href="https://twitter.com/D1gitalN3rd">Twitter</a>
+            <a rel="Facebook" href="https://www.facebook.com/nick.avino.7">Facebook</a>
+            <a rel="Instagram" href="https://www.instagram.com/nckavino/">Instagram</a><br>
+        <img
+        src="./images/profile pic.jpg"
+        alt="Profile picture"
+        />
+        <p id="bio">Hello! My name is Nick, and as you might have gueesed by now, this is my first website.
+            I am so happy that you came here to check this out. I graduated high school in 2013 and since then
+            I have spent my time studying and working. Recently I have decided to join FlatIron for software Engineering.
+            I am very excited to see where this new path bigs me.
+        </p>
+
     </body>
 </html>
